# scanner

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  SPEC.md  pyproject.toml  requirements.txt  spec_v01.md
.github/agents/: architect.agent.md  coder.agent.md  qa.agent.md  reviewer.agent.md
docs/: AGENT_SESSION_PROTOCOL.md  INVARIANTS.md  MCP_LOCAL_DESIGN.md  NOW.md  PERSISTENT_AGENT_WORKFLOW.md  PROJECT_CONTEXT.md  Repo_Structure.md  SESSION_NOTES.md  SPRINT_PLAN.md
src/scanner/: __init__.py  __main__.py
src/scanner/agent/: push.py
src/scanner/anomaly/: __init__.py  incidents.py  scoring.py  signals.py
src/scanner/baseline/: __init__.py  mode.py  snapshot.py  stats.py
src/scanner/collector/: __init__.py  network_collector.py  process_collector.py  rate_limiter.py  resource_collector.py
src/scanner/common/: __init__.py  config.py  identity.py  types.py
src/scanner/gui/: app.py
src/scanner/hub/: server.py  store.py
src/scanner/reporting/: __init__.py  renderer.py
src/scanner/service/: __init__.py  orchestrator.py  (+1 more)
tests/: test_anomaly_incidents.py  test_anomaly_scoring.py  test_anomaly_signals.py  test_baseline_mode.py  test_baseline_snapshot.py  test_baseline_stats.py  test_e2e_pipeline.py  test_network_collector.py  test_process_collector.py  test_rate_limiter.py  test_reporting.py  test_resource_collector.py  test_scanner_foundation.py  test_service_orchestrator.py  test_soak_performance.py  test_storage_bootstrap.py  test_verify_adapters.py  test_verify_cache.py  test_whitelist_proposals.py  test_whitelist_rules.py  test_whitelist_safety.py
(+10 files in other folders)
