[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "scanner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["psutil>=5.9,<8"]

[project.optional-dependencies]
service = ["pywin32"]
hub = ["fastapi>=0.110,<1", "uvicorn>=0.29,<1"]

[project.scripts]
scanner = "scanner.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
